--- a/styles.css
+++ b/styles.css
@@ -160,11 +160,11 @@ button {
 }
 
 .card {
-  width: 100%;
+  width: 300px;
   height: 100%;
   padding: 50px;
+  flex-wrap: wrap;
 
-  display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 20px 30px;
